02-update-component/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 9898
    protocol: TCP
    targetPort: http
  - port: 9999
    targetPort: grpc
    protocol: TCP
    name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
